<resources>
    <string name="app_name" translatable="false">Marta</string>
    <string name="map">Map</string>
    <string name="safety">Safety</string>
    <string name="service">Service</string>
    <string name="ok" translatable="false">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="try_again">Try again</string>
    <string name="send">Send</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading…</string>
    <string name="search">Search</string>
    <string name="undo">Undo</string>
    <string name="no_internet_title">No internet connection</string>
    <string name="no_internet_reconnect_message">An error with connection occurred, do you want to try again?</string>
    <string name="press_to_exit">Press once again to exit!</string>
    <string name="settings">Settings</string>
    <string name="unsaved_changes_dialog_msg">Do you want to discard changes?</string>
    <string name="discard">Discard</string>
    <string name="delete">Delete</string>
    <string name="keep_editing">Keep editing</string>
    <string name="data_saved">Data successfully saved!</string>
    <string name="update_error_title">Data not saved!</string>
    <string name="update_error_message">There was an error with saving the data, please check connection and try again!</string>
    <string name="operation_failed_message">Operation failed, please check connection and try again later!</string>
    <string name="about_us">About us</string>
    <string name="about_us_text_part1">Application made as part of the hackathon HackTheCrisis Denmark.\n</string>
    <string name="about_us_text_part2">Our team is only two people. We are IT students at the Wrocław University of Science and Technology, so we wanted to use our skills to help in a difficult time of the coronavirus epidemic in the way we can do it best.\n</string>
    <string name="about_us_text_part3">If you would like to support us, you can do so by clicking the button below:</string>
    <string name="support_btn_text">Buy us a coffee</string>
    <string name="about_us_contact">If you have found any errors or want to help us improve the application, please contact us:</string>
    <string name="preferences">Preferences</string>
    <string name="night_mode_key" translatable="false">night_mode</string>
    <string name="night_mode_title">Night mode</string>
    <string name="night_mode_summary">Turn on night mode in the app</string>
    <string name="safety_rules">Safety rules</string>
    <string name="safety_header">Your safety is the most important to prevent spreading of the coronavirus!\nPlease follow the rules below:</string>
    <string name="safety_rule1">Do not go outside without explicit necessity!\n#StayAtHome</string>
    <string name="safety_rule2">Try to protect yourself as much as possible. Wear gloves and a mask when you leave the house.</string>
    <string name="safety_rule3">Regularly wash your hands with soap and water or clean them with an alcohol-based hand rub.</string>
    <string name="safety_rule4">Avoid touching eyes, nose and mouth. Hands touch many surfaces and can pick up viruses.</string>
    <string name="safety_rule5">Cover your mouth and nose with your bent elbow or tissue when you cough or sneeze.</string>
    <string name="safety_rule6">Maintain at least 1 metre distance between yourself and anyone who is coughing or sneezing, as well as your interlocutors.</string>
    <string name="safety_rule7">Touch surfaces including desks, tables, door handles, light switches, handrails must be wiped regularly with water and detergent or a disinfectant.</string>
    <string name="safety_rule8">If you have a fever, cough and difficulty breathing, seek medical attention and call in advance. Follow the directions of your local health authority.</string>
    <string name="safety_rule9">Keep up to date on the latest information about COVID-19.</string>
    <string name="based_on_who">Prepared based on the guidelines of the\nWorld Health Organization</string>
    <string name="my_account">My account</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">Sign out</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_account">Create account</string>
    <string name="back_to_sign_in">Return to sign in</string>
    <string name="email_error">Incorrect email address.</string>
    <string name="phone_error_incorrect">Incorrect phone number.</string>
    <string name="password_error_empty">Password cannot be empty!</string>
    <string name="password_error_too_short">Password must contain at least 6 signs.</string>
    <string name="password_error_wrong">Password must contain upper/lowercase and number.</string>
    <string name="name_error_too_short">Name must contain at least 3 signs.</string>
    <string name="account_not_found_dialog_message">Account not found!</string>
    <string name="account_exists_dialog_message">There is already an account registered to this email address!</string>
    <string name="signed_in">Signed in</string>
    <string name="sign_in_no_user_error">No account with this email address found!</string>
    <string name="sign_in_wrong_password_error">Wrong password entered!</string>
    <string name="sign_in_error">Sign in failed, please check connection and try again in few minutes!</string>
    <string name="sign_up_error">Sign up failed, please check connection and try again in few minutes!</string>
    <string name="sign_up_existing_user_error">There is already an user for this address!</string>
    <string name="sign_up_successful_dialog_title">Signed up</string>
    <string name="sign_up_successful_dialog_message">In order to use your account, you must verify your account (check your email).</string>
    <string name="verify_email_dialog_title">Verify email</string>
    <string name="verify_email_dialog_message">In order to use your account, you must verify your account.</string>
    <string name="verify_email_send_again">Send again</string>
    <string name="reset_password_dialog_title">Reset password</string>
    <string name="reset_password_dialog_message">Enter the email address:</string>
    <string name="operation_failed_error">Operation failed, please check connection and the input!</string>
    <string name="message_sent">Message sent</string>
    <string name="change_password">Change password</string>
    <string name="change_email_address">Change email address</string>
    <string name="leave_team">Leave team</string>
    <string name="leave_team_dialog_title">Leaving team</string>
    <string name="leave_team_dialog_message">Are you sure you want to leave your team?</string>
    <string name="leave">Leave</string>
    <string name="leave_successful">Leaving successful</string>
    <string name="leave_failed_title">Leaving failed</string>
    <string name="leave_failed_message_leader">You cannot leave your group without finding a new team leader!</string>
    <string name="delete_account">Delete account</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="repeat_new_password">Repeat new password</string>
    <string name="repeated_password_error">Passwords do not match</string>
    <string name="authenticate_failed">Wrong password, please check the input</string>
    <string name="change_password_successful">Password changed!</string>
    <string name="new_email_address">New email address</string>
    <string name="change_email_successful">Email address changed!</string>
    <string name="delete_account_dialog_title">Deleting account</string>
    <string name="delete_account_dialog_message">If you want to delete your account, verify your password below:</string>
    <string name="delete_successful">Account deleted</string>
    <string name="delete_failed_title">Deleting failed</string>
    <string name="delete_failed_message_leader">You cannot delete your account without finding a new team leader!</string>
    <string name="privacy_policy_link">https://docs.google.com/document/d/1YOyEKYTfRs7fNFb71DTZdUTfz9zQvONhL8e9KYM19ZU/</string>
    <string name="privacy_policy_declaration">I declare that I have read and accepted the privacy policy.</string>
    <string name="privacy_policy">privacy policy</string>
    <string name="teams">Teams</string>
    <string name="team_details">Team details</string>
    <string name="team_name">Team name</string>
    <string name="city">City</string>
    <string name="team_joining">Team joining</string>
    <string name="join">Join</string>
    <string name="team_code_have">If you have your team code, you can type it below:</string>
    <string name="team_code">Team code</string>
    <string name="team_code_dont_have">Otherwise:</string>
    <string name="browse_teams">Browse teams</string>
    <string name="create_team">Create team</string>
    <string name="team_code_empty_error">Team code cannot be empty!</string>
    <string name="team_not_found">Team not found</string>
    <string name="team_code_invalid_error">No team with the given code was found! Please check if the correct code has been entered!</string>
    <string name="added_to_team_successful">You have been added to team!</string>
    <string name="team_created_successful">Your team has been created!</string>
    <string name="save_new_team_btn_description">Tap here to create new team</string>
    <string name="close_window_btn_description">Tap here to close this window</string>
    <string name="use_same_email_as_account">Use the email address that is assigned to my account</string>
    <string name="city_error_empty">City cannot be empty.</string>
    <string name="phone_error_empty">Phone number cannot be empty.</string>
    <string name="existing_teams">Existing teams</string>
    <string name="city_search">City where you want to help</string>
    <string name="empty_teams_list">There are no teams created yet!\nYou can create team on your own!</string>
    <string name="email_btn_description">Tap here to send email to leader of this team quickly</string>
    <string name="send_email_chooser">Send mail via:</string>
    <string name="send_email_error">There is no email client installed!</string>
    <string name="sms_btn_description">Tap here to send sms to leader of this team quickly</string>
    <string name="team_members">Team members</string>
    <string name="invite_to_team">Invite to the team</string>
    <string name="invite_to_team_title">Inviting to the team</string>
    <string name="invite_to_team_message">If you want to invite someone to your team, send them the following code:\n %s</string>
    <string name="invite_btn_description">Tap here to show invite code</string>
    <string name="empty_team_list">You are the only member of the team!\nYou can invite your friends and start working on a better tomorrow!</string>
    <string name="copy_to_clipboard">Copy</string>
    <string name="copied_to_clipboard">Code copied to clipboard</string>
    <string name="team_updated">Team successfully updated!</string>
    <string name="team_update_error_message">There was an error with updating the team!</string>
    <string name="leader_icon_description">This icon shows that the user is a leader</string>
    <string name="member_options_btn_description">Tap here to show options what you can do with the user</string>
    <string name="show_tasks">Show tasks</string>
    <string name="shopping">Shopping</string>
    <string name="animals_care">Animals care</string>
    <string name="help_at_home">Help at home</string>
    <string name="other">Other</string>
</resources>