<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_martas_templates"
        android:icon="@drawable/ic_menu_marta"
        android:title=""
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_show_tasks"
        android:title="@string/show_tasks"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_team_details"
        android:title="@string/team_details"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_account"
        android:title="@string/my_account"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never" />
</menu>