<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.fragments.TeamJoinFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/teamCodeTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/team_code_have"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textColor="@color/colorText"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/teamCodeInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="44dp"
            android:textColorHint="@color/colorText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/teamCodeTV">

            <pl.marta.view.ui.MyTextInputEditText
                android:id="@+id/teamCodeET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorBackground"
                android:hint="@string/team_code"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/joinTeamBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/join"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="@color/colorBackground"
            app:cornerRadius="4dp"
            app:layout_constraintEnd_toEndOf="@+id/teamCodeInputLayout"
            app:layout_constraintStart_toStartOf="@+id/teamCodeInputLayout"
            app:layout_constraintTop_toBottomOf="@id/teamCodeInputLayout" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/teamCodeDontHaveTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/team_code_dont_have"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textColor="@color/colorText"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@+id/teamCodeTV"
            app:layout_constraintStart_toStartOf="@+id/teamCodeTV"
            app:layout_constraintTop_toBottomOf="@+id/joinTeamBtn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/browseTeamsBtn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/browse_teams"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="@color/colorAccent"
            app:cornerRadius="4dp"
            app:layout_constraintEnd_toEndOf="@+id/joinTeamBtn"
            app:layout_constraintStart_toStartOf="@+id/joinTeamBtn"
            app:layout_constraintTop_toBottomOf="@id/teamCodeDontHaveTV"
            app:strokeColor="@color/colorAccent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/createTeamBtn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/create_team"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="@color/colorAccent"
            app:cornerRadius="4dp"
            app:layout_constraintEnd_toEndOf="@+id/joinTeamBtn"
            app:layout_constraintStart_toStartOf="@+id/joinTeamBtn"
            app:layout_constraintTop_toBottomOf="@id/browseTeamsBtn"
            app:strokeColor="@color/colorAccent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>