<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#28292e"
        app:passwordToggleEnabled="true">

        <pl.marta.view.ui.MyTextInputEditText
            android:id="@+id/currentPasswordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFF"
            android:hint="@string/current_password"
            android:inputType="textPassword"
            android:textColor="#28292e"
            android:textColorHint="#28292e" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColorHint="#28292e"
        app:passwordToggleEnabled="true">

        <pl.marta.view.ui.MyTextInputEditText
            android:id="@+id/newPasswordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFF"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:textColor="#28292e"
            android:textColorHint="#28292e" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColorHint="#28292e"
        app:passwordToggleEnabled="true">

        <pl.marta.view.ui.MyTextInputEditText
            android:id="@+id/repeatPasswordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFF"
            android:hint="@string/repeat_new_password"
            android:inputType="textPassword"
            android:textColor="#28292e"
            android:textColorHint="#28292e" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>